--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -38,4 +38,24 @@
             <p>
         </div>
     </header>
+    <article>
+        <h1>BarCamp 3 <span class="event-days-left">Faltan 30 dias</span></h1>
+        <p>Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.</p> 
+        <div class="read-more-button">
+            Leer más..
+        </div>
+        <div class="article-end-separator">
+            <div class="article-end-left"></div>
+            <div class="article-end-middle"></div>
+            <div class="article-end-right"></div>
+        </div>
+    </article>
+    <div class="main-page-read-more">
+        <div class="goto-events-button">
+            Ver más eventos
+        </div>
+        <div class="goto-blog-button">
+            Ir al Blog
+        </div>
+    </div>
   </div>
