Added Miguel Machado to authors list and github fork ribbon

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Coltsin Theme
-Theme URI: http://coltsin.com
+Theme URI: http://coltsin.mx
 Description: Theme used for the Coltsin Website
-Author: Alberto Avila (albertein)
+Author: Alberto Avila (albertein), design by Miguel Angel Machado (mmachado53) 
 Author URI: http://albertein.com.mx
 Version: 1.0
 Tags: coltsin
