--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,7 +17,7 @@
     <a href="http://github.com/albertein/coltsintheme"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/abad93f42020b733148435e2cd92ce15c542d320/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
   <div class="container">
     <header>
-        <menu class="top-menu">
+        <nav class="top-menu">
             <div class="top-menu-container">
                 <ul>
                     <li class="top-menu-actual">Inicio</li>
@@ -31,7 +31,7 @@
                     </li>
                 </ul>
             </div>
-        </menu>
+        </nav>
         <div class="main-background">
             <p>
                 <span class="coltsin-name">Coltsin</span>, 
