--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -42,7 +42,7 @@
     <article>
         <h1>BarCamp 3 <span class="event-days-left">Faltan 30 dias</span></h1>
         <p>Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.</p> 
-        <div class="read-more-button">
+        <div class="read-more-button orange-button">
             Leer más..
         </div>
         <div class="article-end-separator">
@@ -52,11 +52,26 @@
         </div>
     </article>
     <div class="main-page-read-more">
-        <div class="goto-events-button">
+        <div class="goto-events-button orange-button">
             Ver más eventos
         </div>
-        <div class="goto-blog-button">
+        <div class="goto-blog-button dark-button">
             Ir al Blog
         </div>
     </div>
+  </div>
+  <div class="contact-inline">
+      <div class="contact-inline-top">
+      </div>
+      <div class="contact-inline-content">
+          <h1>Contacto</h1>
+          <p><input type="text" value="Nombre"></p>
+          <p><input type="email" value="Correo Electronico"></p>
+          <p><input type="text" value="Asunto"></p>
+          <p><textarea>Mensage</textarea></p>
+          <div class="contact-send-button orange-button">
+              Enviar
+          </div>
+          <div class="clear"></div>
+      </div>
   </div>
