--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,14 +1,10 @@
-    <article>
+    <article class="main-article">
         <h1>BarCamp 3 <span class="event-days-left">Faltan 30 dias</span></h1>
         <p>Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.Descripción del evento Barcamp.</p> 
         <div class="read-more-button orange-button">
             Leer más..
         </div>
-        <div class="article-end-separator">
-            <div class="article-end-left"></div>
-            <div class="article-end-middle"></div>
-            <div class="article-end-right"></div>
-        </div>
+	<div class="clear"></div>
     </article>
     <div class="main-page-read-more">
         <div class="goto-events-button orange-button">
