--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </nav>
-	<div class="contact-inline">
+	<div class="contact-inline contact-inline-downward">
 	  <div class="contact-inline-top">
 	  </div>
 	  <div class="contact-inline-content">
