--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,11 @@ div.read-more-button {
     margin-right: 20px;
 }
 
+div.read-more-button a {
+    color: #f8f8f0;
+    text-decoration: none;
+}
+
 div.main-page-read-more {
     margin-bottom: 50px;
 }
@@ -144,12 +149,20 @@ footer {
 div.footer-border-box {
     width: 100%;
     height: 260px;
+}
+.footer-border-box {
     border-bottom: 2px dashed white;
 }    
-div.contact-inline {
-    position: absolute;
+div.contact-inline-downward {
     top: 125px;
     left: 620px;
+}
+div.contact-inline-upward {
+    top: 600px;
+    left: 800px;
+}
+div.contact-inline {
+    position: absolute;
     z-index: 100;
     display: none;
 }
@@ -160,14 +173,26 @@ div.contact-inline-top {
     height: 34px;
     background: url("img/popup-top.png");
 }
+div.contact-inline-bottom {
+    height: 34px;
+    background: url("img/popup-bottom.png");
+}
+
 div.contact-inline-content {
     background-color: #272323;
     border-radius: 15px;
     color: #f8f8f0;
-    box-shadow: 0 8px 8px black;
+    padding: 20px 0px;
+}
+div.contact-inline-downward div.contact-inline-content {
+   box-shadow: 0 8px 8px black;
     -moz-box-shadow: 0 8px 8px black;
     -webkit-box-shadow: 0 8px 8px black;
-    padding: 20px 0px;
+}
+div.contact-inline-upward div.contact-inline-content {
+   box-shadow: 0 -8px 8px black;
+    -moz-box-shadow: 0 -8px 8px black;
+    -webkit-box-shadow: 0 -8px 8px black;
 }
 div.contact-inline-content > * {
     margin-left: 10px;
@@ -193,6 +218,7 @@ div.orange-button, div.dark-button {
     box-shadow: 3px 3px 1px #000;
     -moz-box-shadow: 1px 1px 1px #000;
     -webkit-box-shadow: 1px 1px 1px #000;
+    cursor: pointer;
 }
 div.orange-button {
     background-color: #ba3401;
@@ -265,6 +291,10 @@ article {
     padding-bottom: 40px;
 }
 
+div.post-entries article {
+    margin-bottom: 60px;
+}
+
 div.post-entries article aside {
     float: right;
     width: 74px;
@@ -309,3 +339,35 @@ div.tag-right {
     width: 20px;
 }
 
+nav.bottom-menu {
+    text-align: center;
+    position: relative;
+    top: -70px;
+}
+
+div.bottom-menu-container {
+    margin: 0 auto;
+}
+
+nav.bottom-menu ul {
+    list-style-type: none;
+    color: #f8f8f0;
+    font-size: 1.4em;
+}
+
+nav.bottom-menu li {
+    display: inline;
+    margin: 20px;
+}
+
+nav.bottom-menu a {
+    text-decoration: underline !important;
+}
+
+article h1 a, div.tag a {
+    color: black;
+    text-decoration: none;
+}
+div.tag {
+    cursor: pointer;
+}
