--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,8 +13,10 @@
 	  {{{content}}}
 	</header>
 	<div class="post-bottom">
+	  {{^single}}
 	  <div class="read-more-button dark-button">
 	    <a href="{{permalink}}">Leer más..</a></div>
+	  {{/single}}
 	  <div class="tag-soup">
 	    {{#tags}}
 	    <div class="tag">
