Added display for pages and added support for the about_page settings

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -23,7 +23,7 @@
                     <li>
 		      <a href="{{home-url}}">Inicio</a>
 		    </li>
-                    <li>A cerca de</li>
+                    <li><a href="{{about-url}}">A cerca de</a></li>
                     <li>Eventos</li>
                     <li>Contacto</li>
                     <li><a href="{{blog-url}}">Blog</a></li>
