Added link to events category on top menu

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -24,7 +24,7 @@
 		      <a href="{{home-url}}">Inicio</a>
 		    </li>
                     <li><a href="{{about-url}}">A cerca de</a></li>
-                    <li>Eventos</li>
+                    <li><a href="{{events-url}}">Eventos</a></li>
                     <li>Contacto</li>
                     <li><a href="{{blog-url}}">Blog</a></li>
                     <li class="top-menu-search">
