Added abaout and events link on footer

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,9 +5,9 @@
 	<div class="bottom-menu-container">
 	  <ul>
 	    <li><a href="{{home-url}}">Inicio</a></li>
-	    <li>A cerca de</li>
+	    <li><a href="{{about-url}}">A cerca de</a></li>
 	    <li><img src="{{theme-path}}/img/logo-big.png" alt="Logo"></li>
-	    <li>Eventos</li>
+	    <li><a href="{{events-url}}">Eventos</a></li>
 	    <li>Contacto</li>
 	  </ul>
 	</div>
