--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,5 +1,5 @@
     <aside>
-      "awesome sidebar is awesome"
+      {{{sidebar}}}
     </aside>
     <div class="post-entries">
       {{#is_archive}}
