--- a/src/templates/front-page.html
+++ b/src/templates/front-page.html
@@ -10,9 +10,9 @@
     {{/events}}
     <div class="main-page-read-more">
         <div class="goto-events-button orange-button">
-            Ver más eventos
+            <a href="{{events-url}}">Ver más eventos</a>
         </div>
         <div class="goto-blog-button dark-button">
-            Ir al Blog
+            <a href="{{blog-url}}">Ir al Blog</a>
         </div>
     </div>
